cluster/storage/rook-ceph/dashboard-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rook
  namespace: rook-ceph
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`rook.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: rook-ceph-mgr-dashboard
          port: 443
  tls:
    secretName: ${SECRET_CERT}
